--- a/Program/Program/Program.csproj
+++ b/Program/Program/Program.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLcon.cs" />
+    <Compile Include="test2.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
