--- a/Program/Program/Program.csproj
+++ b/Program/Program/Program.csproj
@@ -43,10 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Besøg.cs" />
+    <Compile Include="Bil.cs" />
+    <Compile Include="Forside.cs" />
+    <Compile Include="Kunde.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLcon.cs" />
-    <Compile Include="test1.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
